--- a/project.config.json
+++ b/project.config.json
@@ -43,12 +43,19 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": -1,
 					"name": "db guide",
-					"pathName": "pages/databaseGuide/databaseGuide"
+					"pathName": "pages/databaseGuide/databaseGuide",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "pages/congratulation/congratulation",
+					"pathName": "pages/congratulation/congratulation",
+					"scene": null
 				}
 			]
 		}
